--- a/frigate/config.yaml
+++ b/frigate/config.yaml
@@ -1,6 +1,6 @@
 name: Frigate
 # TODO: apply these changes after updating to 0.16.0:
-# https://github.com/blakeblackshear/frigate-hass-addons/pull/210
+# https://github.com/rapartlu/frigate-hass-addons/pull/210
 version: 0.15.1
 breaking_versions:
   - 0.15.0
@@ -10,8 +10,8 @@ panel_icon: "mdi:cctv"
 panel_title: Frigate
 slug: frigate
 description: NVR with realtime local object detection for IP cameras
-url: "https://github.com/blakeblackshear/frigate"
-image: ghcr.io/blakeblackshear/frigate
+url: "https://github.com/rapartlu/frigate"
+image: ghcr.io/rapartlu/frigate
 startup: application
 boot: auto
 init: false
