--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Frigate Add-ons
-url: "https://github.com/blakeblackshear/frigate-hass-addons"
-maintainer: blakeblackshear
+url: "https://github.com/rapartlu/frigate-hass-addons"
+maintainer: rapartlu
